--- a/complete-node-bootcamp-master/1-node-farm/starter/templates/template-card.html
+++ b/complete-node-bootcamp-master/1-node-farm/starter/templates/template-card.html
@@ -10,12 +10,12 @@
         <h6 class="card__detail card__detail--organic">Organic!</h6>
       </div>
 
-      <div class="card__detail-box {%NOT_ORGANIC%}">
-        <h6 class="card__detail">{%QUANTITYNAME%}</h6>
+      <div class="card__detail-box">
+        <h6 class="card__detail">{%QUANTITY%</h6>
       </div>
 
       <div class="card__detail-box">
-        <h6 class="card__detail card__detail--price">{%PRICE%}</h6>
+        <h6 class="card__detail card__detail--price">{%PRICE% €</h6>
       </div>
     </div>
 
